    Corrected typo in ora_lob_read() example thanks to Johannes Wierny.
    Corrected LOB example thanks to Sascha Pfalz and Thomas Upton.
    Updated README.macosx thanks to Hilmar Lapp.
    Added $dbh->reauthenticate($user,$pass) docs thanks to Andy Hassall.
    Added $dbh->{ora_parse_error_offset} docs thanks to Andy Hassall.
    Added gcc example to README.aix thanks to Adrian Terranova.

  Build Changes:
    Fixed build32/build64 Makefile.PL bug spotted by Sean Kelly.
    Fixed Oracle version detection on clients thanks to Marko Asplund.
    Fixed Oracle 10 version detection on clients thanks to Andy Hassall.
    Fixed HP-UX 64bit build issues thanks to Weiguo Sun.
    Fixed VMS build issues thanks to Jakob Snoer.
    Fixed suprious warning from Makefile.PL thanks to Marko Asplund.
    Fixed compiler warnings thanks to Robert Baron.
    Fixed oci.def for Cygwin by adding OCILobWriteAppend thanks to Gert-Jan Paulissen.
    Changed to use ANSI C prototypes thanks to Steffen Goeldner.
    Changed to not warn if ORACLE_HOME env var is not defined
      as it's not used with Oracle's new 'Instant Client'.
    Added Test::More as a prerequisite module.
    Added many Unicode related tests thanks to Lincoln Baxter.

=head1 Changes in DBD-Oracle 1.15   27th January 2004

  NOTE: DBD::Oracle now requires DBI version 1.28 (June 2002) or later.

  NOTE: This is probably the last release that will support being
  built with the old Oracle 7 OCI interface.

  NOTE: This release will build for perl 5.5 only after some manual edits
  which are detailed in README.help.  Future releases may not build for 5.5.
  Perl 5.5.3 is very old and and upgrading to at least 5.6.1 is recommended.
  The DBI itself has required perl >= 5.6.0 since DBI 1.38, August 2003.

  Fixed Makefile.PL for HPUX thanks to H.Merijn Brand & Sweth Chandramouli.
  Fixed Makefile.PL for handling 32/64bit libs thanks to Lincoln Baxter,
    Sean Kelly, Joel Van Boeckel and others. Oh the fun we've had.