@@ -49,6 +49,7 @@
     Added $dbh->reauthenticate($user,$pass) docs thanks to Andy Hassall.
     Added $dbh->{ora_parse_error_offset} docs thanks to Andy Hassall.
     Added gcc example to README.aix thanks to Adrian Terranova.
+    Added INSERT ... RETURNING ... example prompted by Steven Lembark.
 
   Build Changes:
     Fixed build32/build64 Makefile.PL bug spotted by Sean Kelly.
